--- a/demo/src/main/resources/templates/form_album.html
+++ b/demo/src/main/resources/templates/form_album.html
@@ -27,7 +27,14 @@
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Género</label>
-                            <input type="text" th:field="*{genero}" class="form-control" />
+                            <div th:if="${#lists.isEmpty(listaGeneros)}">
+                                <input type="text" th:field="*{genero}" class="form-control" />
+                            </div>
+                            <div th:unless="${#lists.isEmpty(listaGeneros)}">
+                                <select th:field="*{genero}" class="form-select">
+                                    <option th:each="g : ${listaGeneros}" th:value="${g.nombre}" th:text="${g.nombre}"></option>
+                                </select>
+                            </div>
                         </div>
                         <div class="d-grid gap-2">
                             <button type="submit" class="btn btn-success">Guardar</button>
